# libcmdparse

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
doc/: FAQs.md  creating-issues.md  options.md
doc/html/: annotated.html  classcli_1_1_command-members.html  classcli_1_1_command.html  classcli_1_1_info-members.html  classcli_1_1_info.html  classcli_1_1_option.html  classcli_1_1command__error-members.html  classcli_1_1command__error.html  classcli_1_1command__error__coll__graph.md5  classcli_1_1command__error__inherit__graph.map  classcli_1_1option__language__error-members.html  classcli_1_1option__language__error.html  classcli_1_1option__language__error__coll__graph.map  classcli_1_1option__language__error__inherit__graph.md5  classcli_1_1parse__error-members.html  classcli_1_1parse__error.html  classcli_1_1parse__error__coll__graph.map  classcli_1_1parse__error__coll__graph.md5  classes.html  classopt__parser.html  classutil_1_1opt__info-members.html  classutil_1_1opt__info.html  classutil_1_1opt__parser-members.html  classutil_1_1opt__parser.html  classutil_1_1option__language__error-members.html  classutil_1_1option__language__error.html  classutil_1_1option__language__error__coll__graph.map  classutil_1_1option__language__error__inherit__graph.md5  classutil_1_1parse__error-members.html  classutil_1_1parse__error.html  classutil_1_1parse__error__coll__graph.md5  classutil_1_1parse__error__inherit__graph.map  cmdparse_8cpp.html  cmdparse_8h.html  cmdparse_8h_source.html  dir_000002_000001.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.map  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.md5  (+59 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enums_1.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  functions_0.js  functions_1.js  (+19 more)
doc/man/man3/: _home_adamu_proj_libcmdparse_lib_.3  _home_adamu_proj_libcmdparse_lib_include_.3  _home_adamu_proj_libcmdparse_lib_src_.3  _home_adamu_proj_liboptparse_lib_.3  _home_adamu_proj_liboptparse_lib_include_.3  _home_adamu_proj_liboptparse_lib_src_.3  cli_Command.3  cli_Info.3  cli_Option.3  cli_command_error.3  cli_option_language_error.3  cli_parse_error.3  cmdparse.cpp.3  cmdparse.h.3  md__r_e_a_d_m_e.3  md_doc_options.3  opt_parser.3  options_parsing.cpp.3  options_parsing.h.3  util.3  util_config_constants.3  util_config_constants_bsd_opt_t.3  util_config_constants_case_sensitive_t.3  util_config_constants_error_if_unknown_t.3  util_config_constants_merged_opt_t.3  util_config_constants_subcommand_t.3  util_opt_info.3  util_opt_parser.3  util_option_language_error.3  util_option_t.3  util_parse_error.3
lib/: tap
lib/include/: cmdparse.h  info.h  option.h  options_parsing.h
lib/src/: CMakeLists.txt  cmdparse.cpp  info.cpp  option.cpp  options_parsing.cpp
t/: 00-sanity.cpp  10-option-number.cpp  20-option-assignment.cpp  30-option-collection.cpp  40-option-handles-name.cpp  50-option-data.cpp  60-merged-option.cpp  70-bsd-option.cpp  80-subcommands.cpp  90-stuck-assignment.cpp  CMakeLists.txt  option-assignment.cpp  option-collection.cpp  option-data.cpp  option-handles-name.cpp  option-number.cpp  sanity.cpp
